подчистил файлы, обновил ссылки

--- a/lesson5/index.html
+++ b/lesson5/index.html
@@ -10,6 +10,10 @@
     <script src="render.js" defer></script>
 </head>
 <body>
-    <div class="desk"></div>
+    <div>
+        <a href="/desk">Desk</a>
+        <a href="/table_reset">Table Reset</a>
+        <a href="/validation">Validation</a>
+    </div>
 </body>
 </html>
