обработчик события перенесен в js код

--- a/lesson5/table_reset/index.html
+++ b/lesson5/table_reset/index.html
@@ -32,7 +32,7 @@
             </tr>
         </table>
 
-        <button type="reset" class="btn-reset" onclick="clearTable(mainTable);">Очистить таблицу</button>
+        <button type="reset" class="btn-reset">Очистить таблицу</button>
     </div>
 </body>
 
